[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/ene.gd" type="Script" id=2]
[ext_resource path="res://sounds/ene_scream.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="ene" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
shape = SubResource( 2 )
disabled = true

[node name="right" type="RayCast2D" parent="."]
position = Vector2( 16, 0 )
enabled = true
cast_to = Vector2( 500, 0 )

[node name="left" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
enabled = true
cast_to = Vector2( -500, 0 )

[node name="up" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, -500 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 0, 24 )
enabled = true
cast_to = Vector2( 0, 500 )

[node name="charge" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="scream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="charge_disabled" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="collider" to="." method="_on_collider_body_entered"]
[connection signal="timeout" from="charge" to="." method="_on_charge_timeout"]
[connection signal="finished" from="scream" to="." method="_on_scream_finished"]
[connection signal="timeout" from="charge_disabled" to="." method="_on_charge_disabled_timeout"]
